--- a/Infant Raj F_Resume/Infant Raj F_Resume.tex
+++ b/Infant Raj F_Resume/Infant Raj F_Resume.tex
@@ -19,5 +19,7 @@ Kitchipalayam(P.O), Salem - 636015, TamilNadu, India.\\
 Email ID: infantfdr@gmail.com Phone No.:+91 8438383635\\
 \hrule 
 
+\Large \textbf{\\Career Objective}\\
+\hspace*{20pt} To work in a challenging environment where I can contribute my talents and skills for the optimum growth and development of the organization.
 
 \end{document}
