--- a/Infant Raj F_Resume/Infant Raj F_Resume.tex
+++ b/Infant Raj F_Resume/Infant Raj F_Resume.tex
@@ -2,6 +2,8 @@
 \usepackage[a4paper, total={7.5in, 10.5in}]{geometry}
 \usepackage{graphicx}
 \usepackage{wrapfig}
+\usepackage{xcolor}
+\usepackage{array}
 \renewcommand{\baselinestretch}{0.95}
 \setlength{\arrayrulewidth}{0.3mm}
 \setlength{\tabcolsep}{5pt}
@@ -22,4 +24,22 @@ Email ID: infantfdr@gmail.com Phone No.:+91 8438383635\\
 \Large \textbf{\\Career Objective}\\
 \hspace*{20pt} To work in a challenging environment where I can contribute my talents and skills for the optimum growth and development of the organization.
 
+\Large \textbf{\\Education}
+\begin{table}[h!]
+	\begin{center}
+		\begin{tabular}{| m{2cm} | m{5.6cm} | m{3cm} | m{3cm} | m{3.6cm} |}
+			\hline
+			\Large\centering\textbf{Course} & \Large\centering\textbf{Institution} & \Large\centering \textbf{Board/\\University} & \Large\centering\textbf{Year\hspace{50pt}of Passing} & \Large\hspace{6pt}\textbf{Performance}\\
+			\hline
+			\Large\centering B.E. (EEE) & \Large\centering Knowledge Institute of Technology, Salem & \Large\centering Anna University & \Large\centering Pursuing & \Large\hspace{2pt} 7.19* (CGPA)\\
+			\hline
+			\Large\centering HSC & \Large\centering St.John's Matric. Hr. Sec. School, Salem & \Large\centering State Board & \Large\centering 2016 & \Large\hspace{30pt}76.67\% \\
+			\hline
+			\Large\centering SSLC & \Large\centering St.Thomas Matriculation School, Salem & \Large\centering State Board & \Large\centering 2014 & \Large\hspace{30pt} 89.20\%\\
+			\hline
+			\multicolumn{5}{c}{\color{white}right}
+			{\large*upto 5\textsuperscript{th} Semester} 
+		\end{tabular}
+	\end{center}
+\end{table}
 \end{document}
