--- a/Infant Raj F_Resume/Infant Raj F_Resume.tex
+++ b/Infant Raj F_Resume/Infant Raj F_Resume.tex
@@ -42,4 +42,13 @@ Email ID: infantfdr@gmail.com Phone No.:+91 8438383635\\
 		\end{tabular}
 	\end{center}
 \end{table}
+
+	\Large \textbf{Projects}
+\begin{enumerate}
+	\item Agribot 1.0
+	\item Smart Home IoT
+	\item Analog Line Follower Robot
+	\item Temperature Controlled Automatic Fan Ragulator
+	\item Car Accident Prevention System
+\end{enumerate}
 \end{document}
