--- a/Infant Raj F_Resume/Infant Raj F_Resume.tex
+++ b/Infant Raj F_Resume/Infant Raj F_Resume.tex
@@ -51,4 +51,16 @@ Email ID: infantfdr@gmail.com Phone No.:+91 8438383635\\
 	\item Temperature Controlled Automatic Fan Ragulator
 	\item Car Accident Prevention System
 \end{enumerate}
+
+\Large \textbf{\\* Training and Internship}\
+
+\begin{itemize}
+	\item Underwent One week Inplant Traning on Electrical Control Unit at JSW Pvt. Ltd. Salem, during 2018
+	\item Underwent One week Hands-on-Training on PLC conducted by Knowledge Institute of Technology, Salem as a part of Value Added Course, during 2018 
+	\item Underwent One week Inplant Training 0n Electrical Maintainance at Steel Authority of India Limited Salem during 2017
+	\item Underwent One week Inplant Training on Embedded Systems at Sans Innovation, Salem, during 2017 
+\end{itemize}
+
+
+
 \end{document}
