--- a/Infant Raj F_Resume/Infant Raj F_Resume.tex
+++ b/Infant Raj F_Resume/Infant Raj F_Resume.tex
@@ -61,6 +61,13 @@ Email ID: infantfdr@gmail.com Phone No.:+91 8438383635\\
 	\item Underwent One week Inplant Training on Embedded Systems at Sans Innovation, Salem, during 2017 
 \end{itemize}
 
+\Large \textbf{\\Technical Skills}\
+\begin{itemize}
+	\item \textbf{Core Skills	:} AC to DC converters,	Robotics and Automation using Atmega 328p Microcontroller, IOT using NodeMCU
+	\item \textbf{Programming Languages	:}	C, C++ (Basic Level)
+	\item \textbf{Software Tools	:}	MATLAB, Proteus, Circuit MOD, MS-Word, MS-PowerPoint and MS-Excel
+	\item \textbf{Other Skills	:} Photoshop, Cyberlink Powerdirector
+\end{itemize}
 
 
 \end{document}
