--- a/Infant Raj F_Resume/Infant Raj F_Resume.tex
+++ b/Infant Raj F_Resume/Infant Raj F_Resume.tex
@@ -69,5 +69,15 @@ Email ID: infantfdr@gmail.com Phone No.:+91 8438383635\\
 	\item \textbf{Other Skills	:} Photoshop, Cyberlink Powerdirector
 \end{itemize}
 
+\Large \textbf{\\Soft Skills}\
+\begin{enumerate}
+	\item Teamwork
+	\item Time Management
+	\item Flexibility
+	\item Design sense
+	\item Attentive and Self-monitoring
+	\item Listening
+\end{enumerate}
+
 
 \end{document}
