--- a/Infant Raj F_Resume/Infant Raj F_Resume.tex
+++ b/Infant Raj F_Resume/Infant Raj F_Resume.tex
@@ -79,5 +79,15 @@ Email ID: infantfdr@gmail.com Phone No.:+91 8438383635\\
 	\item Listening
 \end{enumerate}
 
+\Large \textbf{\\Extra Curricular Activities}\
+\begin{enumerate}	\item \textbf{Clubs and Forums}
+	\begin{itemize}
+		\item Member in Rotaract Club.
+		\item Member in Instrumentation and Control Engineers Club.
+		\item Member in Indian Society for Technical Education (ISTE).
+		\item Won First Prize for Short Film Contest as a team at Annual Day Events 2017.
+	\end{itemize}
+\end{enumerate}
+
 
 \end{document}
