--- a/Infant Raj F_Resume/Infant Raj F_Resume.tex
+++ b/Infant Raj F_Resume/Infant Raj F_Resume.tex
@@ -89,5 +89,16 @@ Email ID: infantfdr@gmail.com Phone No.:+91 8438383635\\
 	\end{itemize}
 \end{enumerate}
 
+\Large \textbf{\\Co-Curricular Activities}\
+\begin{itemize}
+	\item \textbf{Contests and Presentations}
+	\begin{enumerate}
+		\item Won \textbf{"Judges Choice Award"} for the project titled \textbf{Agribot 1.0} in National Finals of e-Yantra Ideas Competition 2019 conducted by IIT Bombay.  
+		\item Won \textbf{Third Prize} in Paper Presentation titled on \textbf{Smart Home IoT} in EDISON 2018, A National Level Technical Symposium at Sona College of Technology, Salem in 2018.
+		\item Won \textbf{Third Prize} in Paper Presentation titled on \textbf{Temperature Controlled Automatic Fan Regulator} in SCIENTEL 2018, A National Level Technical Symposium at Government College of Engineering, Salem in 2018.
+		\item Won \textbf{Second Prize} in Make a Product Expo titled on \textbf{Temperature Controlled Automatic Fan Regulator} conducted by AMBERZ’ association, Knowledge Institute of Technology, Salem in 2018.
+		
+	\end{enumerate}
+\end{itemize}
 
 \end{document}
