--- a/Infant Raj F_Resume/Infant Raj F_Resume.tex
+++ b/Infant Raj F_Resume/Infant Raj F_Resume.tex
@@ -99,6 +99,14 @@ Email ID: infantfdr@gmail.com Phone No.:+91 8438383635\\
 		\item Won \textbf{Second Prize} in Make a Product Expo titled on \textbf{Temperature Controlled Automatic Fan Regulator} conducted by AMBERZ’ association, Knowledge Institute of Technology, Salem in 2018.
 		
 	\end{enumerate}
+
+ \item \textbf{Workshops and Seminars}
+\begin{enumerate}
+	\item Participated a Seminar on \textbf{Recent Technologies in Autonomous and Hybrid Vechicles} by IEEE at Knowledge Institute of Technology, Salem.
+	\item Attended One Day Workshop titled on \textbf{PLC and SCADA} conducted at Karpagam College of Engineering, Coimbatore.
+	\item Attended One Day Workshop titled on \textbf{IOT using Arduino Nano and ESP8266} conducted by Top Engineers at IIT Madras.
+	\item Attended One Day Workshop titled on \textbf{Robotics} conducted by Master Technologies, Salem.
+\end{enumerate}
 \end{itemize}
 
 \end{document}
