--- a/Infant Raj F_Resume/Infant Raj F_Resume.tex
+++ b/Infant Raj F_Resume/Infant Raj F_Resume.tex
@@ -109,4 +109,13 @@ Email ID: infantfdr@gmail.com Phone No.:+91 8438383635\\
 \end{enumerate}
 \end{itemize}
 
+\Large \textbf{\\Personal Details}
+\Large \hspace{20pt}Father’s Name	:  \Large Francis D \\ 
+\hspace*{140pt}\Large Mother’s Name	:  \Large Lourdumary F \\ 
+\hspace*{140pt}\Large Sex :  \Large Male \\ 
+\hspace*{140pt}\Large Date Of Birth	:  \Large June 29, 1998 \\ 
+\hspace*{140pt}\Large Nationality :  \Large Indian \\ 
+
+
+
 \end{document}
