--- a/Infant Raj F_Resume/Infant Raj F_Resume.tex
+++ b/Infant Raj F_Resume/Infant Raj F_Resume.tex
@@ -109,12 +109,12 @@ Email ID: infantfdr@gmail.com Phone No.:+91 8438383635\\
 \end{enumerate}
 \end{itemize}
 
-\Large \textbf{\\Personal Details}
-\Large \hspace{20pt}Father’s Name	:  \Large Francis D \\ 
-\hspace*{140pt}\Large Mother’s Name	:  \Large Lourdumary F \\ 
-\hspace*{140pt}\Large Sex :  \Large Male \\ 
-\hspace*{140pt}\Large Date Of Birth	:  \Large June 29, 1998 \\ 
-\hspace*{140pt}\Large Nationality :  \Large Indian \\ 
+\Large \textbf{\\Personal Details}\\
+\Large \hspace*{20pt}Father’s Name\hspace{20pt}:  \Large Francis D \\ 
+\hspace*{20pt}\Large Mother’s Name\hspace{15pt}:  \Large Lourdumary F \\ 
+\hspace*{20pt}\Large Sex\hspace{88pt}: \Large Male \\ 
+\hspace*{20pt}\Large Date of Birth\hspace{26pt}: \Large June 29, 1998 \\ 
+\hspace*{20pt}\Large Nationality\hspace{39pt}: \Large Indian \\ 
 
 
 
