--- a/Infant Raj F_Resume/Infant Raj F_Resume.tex
+++ b/Infant Raj F_Resume/Infant Raj F_Resume.tex
@@ -116,6 +116,19 @@ Email ID: infantfdr@gmail.com Phone No.:+91 8438383635\\
 \hspace*{20pt}\Large Date of Birth\hspace{26pt}: \Large June 29, 1998 \\ 
 \hspace*{20pt}\Large Nationality\hspace{39pt}: \Large Indian \\ 
 
+\Large \textbf{\\Reference}
+\begin{itemize}\item Dr.C.Muniraj, M.E., Ph.D., \\
+	Professor \& Head, Department of Electrical and Electronics Engineering,\\
+	Knowledge Institute of Technology, Salem, Tamil Nadu.\\
+	hod.eee@kiot.ac.in
+\end{itemize}
+
+\begin{itemize}
+	\item Mr.L.Manivannan, M.E.,\\
+	Assistant Professor, Department of Electrical and Electronics Engineering,\\
+	Knowledge Institute of Technology, Salem, Tamil Nadu.\\
+	lmeee@kiot.ac.in
+\end{itemize}
 
 
 \end{document}
