--- a/Infant Raj F_Resume/Infant Raj F_Resume.tex
+++ b/Infant Raj F_Resume/Infant Raj F_Resume.tex
@@ -130,5 +130,8 @@ Email ID: infantfdr@gmail.com Phone No.:+91 8438383635\\
 	lmeee@kiot.ac.in
 \end{itemize}
 
+\Large \textbf{\\ Declaration}\\
+\hspace*{20pt}\Large I hereby declare that the above statements are true and correct to the best of my knowledge.
+
 
 \end{document}
