--- a/Infant Raj F_Resume/Infant Raj F_Resume.tex
+++ b/Infant Raj F_Resume/Infant Raj F_Resume.tex
@@ -59,10 +59,10 @@
 		\Large \textbf{\\* Training and Internship}\
 		
 		\begin{itemize}
-			\item Underwent One week Inplant Traning on \textbf{Electrical Control Unit} at \textbf{JSW Pvt. Ltd.} Salem, during 2018
-			\item Underwent One week Hands-on-Training on \textbf{PLC} conducted by \textbf{Knowledge Institute of Technology}, Salem as a part of Value Added Course, during 2018 
-			\item Underwent One week Inplant Training on \textbf{Electrical Maintainance} at \textbf{Steel Authority of India Limited} Salem, during 2017
-			\item Underwent One week Inplant Training on \textbf{Embedded Systems} at \textbf{Sans Innovation}, Salem, during 2017 
+			\item Underwent One week Inplant Traning on \textbf{Electrical Control Unit} at \textbf{JSW Pvt. Ltd.} Salem, during 2018.
+			\item Underwent One week Hands-on-Training on \textbf{PLC} conducted by \textbf{Knowledge Institute of Technology}, Salem as a part of Value Added Course, during 2018. 
+			\item Underwent One week Inplant Training on \textbf{Electrical Maintainance} at \textbf{Steel Authority of India Limited} Salem, during 2017.
+			\item Underwent One week Inplant Training on \textbf{Embedded Systems} at \textbf{Sans Innovation}, Salem, during 2017. 
 		\end{itemize}
 		
 		\Large \textbf{\\Technical Skills}\
